deployment/CookifyDeployment/consul/api-gateway/api_gateway.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: api-gateway
  namespace: consul
spec:
  gatewayClassName: consul-api-gateway
  listeners:
    - protocol: HTTPS
      port: 443
      name: https
      hostname: "cookify.net"
      tls:
        mode: Terminate
        certificateRef:
          name: example-com-cert
          kind: Secret
          group: core
      routes:
        kind: HTTPRoute
        namespaces:
          from: Same
        selector:
          matchLabels:
            gateway: api-gateway
        group: networking.k8s.io
    - protocol: HTTP
      port: 80
      name: http
      routes:
        kind: HTTPRoute
        namespaces:
          from: Same
        selector:
          matchLabels:
            gateway: api-gateway
        group: networking.k8s.io
