deployment/CookifyDeployment/consul/api-gateway/routes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-route-1
  namespace: consul
  labels:
    gateway: api-gateway
spec:
  parentRefs:
    - name: api-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /service1
      backendRefs:
        - kind: Service
          name: service1
          namespace: default
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /service2
      backendRefs:
        - kind: Service
          name: service2
          namespace: default
          port: 80
